--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,6 +13,7 @@ packages:
   - docs
   - playground
 catalog:
+  '@arco-design/web-vue': ^2.56.3
   '@ast-grep/napi': ^0.32.3
   '@changesets/changelog-github': ^0.5.0
   '@changesets/cli': ^2.27.11
