--- a/apps/web-arco/tsconfig.json
+++ b/apps/web-arco/tsconfig.json
@@ -4,24 +4,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
       "#/*": ["./src/*"]
-    },
-    "types": [
-      "vite/client",
-      "node",
-      "./types/global",
-      "./types/axios",
-      "./types/adapter"
-    ]
+    }
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "types/**/*.d.ts",
-    "vite.config.ts"
-  ],
-  "exclude": ["node_modules", "dist"]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
