--- a/apps/web-arco/.env
+++ b/apps/web-arco/.env
@@ -3,3 +3,8 @@ VITE_APP_TITLE=AdminStarterFrontend
 
 # 应用命名空间，用于缓存、store等功能的前缀，确保隔离
 VITE_APP_NAMESPACE=vben-web-arco
+
+VITE_APP_COPYRIGHT_COMPANY_NAME=
+VITE_APP_COPYRIGHT_COMPANY_SITE_LINK=
+VITE_APP_COPYRIGHT_ICP=
+VITE_APP_COPYRIGHT_ICP_LINK=
