--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -62,6 +62,7 @@ catalog:
   '@vue/test-utils': ^2.4.6
   '@vueuse/core': ^12.3.0
   '@vueuse/integrations': ^12.3.0
+  ant-design-vue: ^4.2.6
   archiver: ^7.0.1
   autoprefixer: ^10.4.20
   axios: ^1.7.9
