--- a/apps/web-arco/.env
+++ b/apps/web-arco/.env
@@ -4,6 +4,9 @@ VITE_APP_TITLE=AdminStarterFrontend
 # 应用命名空间，用于缓存、store等功能的前缀，确保隔离
 VITE_APP_NAMESPACE=vben-web-arco
 
+VITE_GLOBAL_SERVER_URL=http://localhost:9401
+VITE_GLOB_API_URL=/veapi
+
 VITE_APP_COPYRIGHT_COMPANY_NAME=
 VITE_APP_COPYRIGHT_COMPANY_SITE_LINK=
 VITE_APP_COPYRIGHT_ICP=
