feat: 新增菜单管理功能，包含菜单列表、权限管理及相关API接口

--- a/apps/web-arco/package.json
+++ b/apps/web-arco/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "catalog:",
+    "@tanstack/vue-query": "catalog:",
+    "@vben-core/menu-ui": "workspace:*",
     "@vben/access": "workspace:*",
     "@vben/common-ui": "workspace:*",
     "@vben/constants": "workspace:*",
