feat: 实现后端权限控制
可控制菜单显示、按钮显示

--- a/apps/web-arco/.env
+++ b/apps/web-arco/.env
@@ -7,6 +7,9 @@ VITE_APP_NAMESPACE=vben-web-arco
 VITE_GLOBAL_SERVER_URL=http://localhost:9401
 VITE_GLOB_API_URL=/veapi
 
+# frontend / backend
+VITE_APP_ACCESS_MODE=backend
+
 VITE_APP_COPYRIGHT_COMPANY_NAME=
 VITE_APP_COPYRIGHT_COMPANY_SITE_LINK=
 VITE_APP_COPYRIGHT_ICP=
