feat: 添加lodash-es依赖并更新相关类型定义，新增useDictData钩子以获取字典数据

--- a/apps/web-arco/package.json
+++ b/apps/web-arco/package.json
@@ -45,9 +45,13 @@
     "@vben/utils": "workspace:*",
     "@vueuse/core": "catalog:",
     "dayjs": "catalog:",
+    "lodash-es": "^4.17.21",
     "pinia": "catalog:",
     "vue": "catalog:",
     "vue-i18n": "catalog:",
     "vue-router": "catalog:"
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.12"
   }
 }
